# face-analysis

./: .gitignore  .gitmodules  MANIFEST.in  README.md  demo.py  install.sh  pyproject.toml  requirements.txt
face_analysis/: __init__.py  face_analysis_pipline.py  run_face_analysis.py
face_analysis/commons/: logger.py
face_analysis/emotions/: utils.py
face_analysis/eyes/: pipeline.py
face_analysis/gazes/: pipeline.py
notebooks/: notebook.ipynb
output/: face_analysis_results.json  image_selection.json  predictions.json
scripts/: face_analyzer.sh  image_selection.sh  inference.sh  l2csnet_weights.sh  shape_predictor.sh
scripts/datasets/: cew.sh
src/: app.py  config.py  emotion_detector.py  eye_state.py  face_detector.py  gaze_detector.py  main.py  model.py
src/face_analysis/: config.py  face_analysis_pipline.py  image_selection.py  run_face_analysis.py
src/face_analysis/emotions/: pipeline.py  results.py
src/face_analysis/eyes/: pipeline.py  utils.py  vis.py
src/face_analysis/gazes/: pipeline.py  utils.py  vis.py
src/utils/: __init__.py  cv2_utils.py  data_utils.py  gaze_utils.py
