[project]
name = "face_analysis"
version = "0.0.1"
description = "A package for analyzing faces in images to detect eye state, gaze direction, and facial expressions"
authors = [
    {name = "Ahmed Salim"},
]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.10"

keywords = ["facial-expressions", "gaze-estimation", "eye-tracking", "deep-learning", "pytorch", "tensorflow"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

dependencies = [
    'matplotlib>=3.3.4',
    'numpy>=1.19.5',
    'opencv-python>=4.5.5',
    'pandas>=1.1.5',
    'Pillow>=8.4.0',
    'scipy>=1.5.4',
    'torch>=1.10.1',
    'torchvision>=0.11.2',
    'tensorflow>=2.10',
    'dlib>=19.24.6',
    'facenet-pytorch==2.6.0',
    'face_detection@git+https://github.com/elliottzheng/face-detection'
]

[project.urls]
homepath = "https://github.com/ahmedsalim3/face-analysis.git"
repository = "https://github.com/ahmedsalim3/face-analysis.git"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"" = [
    "models/*.pkl",
    "models/*.dat",
    "models/*.h5",
    "models/*.xml"
]

[tool.setuptools.package-data]
face_analysis = [
    "emotions/data/*",
    "emotions/data/*.*"
]

[project.scripts]
face-analysis = "face_analysis.run_face_analysis:main"